//
//  Sleeping.swift
//  Patriot
//
//  This file duplicates defines from IoT.h for use in Swift
//
//  Created by Ron Lisle on 7/17/21.
//

import Foundation

enum Sleeping: Int {
    case unknown = 0
    case Awake = 1
    case Retiring = 2
    case Asleep = 3
}
