...
    
    var body: some View {
        NavigationView {
            ScrollView {
                //TODO: add more stuff'
                VStack(alignment: .leading) {
                    Text("Brightness")
                        .font(.title2)
                        .padding(.top, 40)
                    PercentSlider(percent: $model.selectedDevice.percent)
                }
                .padding(.horizontal, 16)
            }
...
